--- a/engine/misc/TODO
+++ b/engine/misc/TODO
@@ -1,23 +1,24 @@
 Working:
-    [] Implement a build system
-    [] Improve the build.bat file
-    [] Refactor the codebase.
-    [] Ship opengl code to a library.
+    [] Make a math library.
+    [] Integreate ImGUI
+    [] Mouse interface.
+    [] Keyboard interface (Improve the existing one).
+    [] Create a renderer.
 
 TODO(Important):
     [] Create Logging library.
-    [] Mouse interface.
-    [] Keyboard interface (Improve the existing one).
     [] Implement camera.
     [] Remove global window Handles and Opengl Contexts?
-    [] Complete the Devendra_Shader.cpp file
     [] Setup compiler switches for performance counter and wireframing.
 
 TODO(Future Upgrade):
-    [] Create sound interface with fmod.
+    [] Create sound interface with DirectSound.
     [] Reorganize the glext.h and wglext.h
     [] Some weird memory issue, Free memory after resizing the screen
-    [] Different translational unit for different files.
+    [] Implement a build system
+    [] Improve the build.bat file
+    [] Refactor the codebase.
+    [] Implement asin() and acos() function without math.h
     
 Completed:
     [] Get a window up and running.
@@ -30,3 +31,6 @@ Completed:
     [] Vsync and color transition rectangle example.
     [] Implement a colorful triangle with rainbow color.
     [] Textures in opengl.
+    [] Ship opengl code to a library.
+    [] Different translational unit for different files.
+    
